remote-falcon-viewer/k8s/manifest-local.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: remote-falcon-local
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-falcon-viewer
  namespace: remote-falcon-local
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remote-falcon-viewer
  template:
    metadata:
      labels:
        app: remote-falcon-viewer
    spec:
      containers:
        - name: remote-falcon-viewer
          image: remote-falcon-viewer:latest
          imagePullPolicy: Never
          resources:
            requests:
              memory: 500Mi
              cpu: 250m
            limits:
              memory: 750Mi
              cpu: 500m
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /remote-falcon-viewer/actuator/health
              port: 8080
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /remote-falcon-viewer/actuator/health
              port: 8080
            initialDelaySeconds: 0
            timeoutSeconds: 10
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /remote-falcon-viewer/actuator/health
              port: 8080
            failureThreshold: 60
            initialDelaySeconds: 0
