remote-falcon-viewer/k8s/manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: #{Namespace}#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{Application}#
  namespace: #{Namespace}#
  labels:
    tags.datadoghq.com/env: #{Env}#
    tags.datadoghq.com/service: #{Application}#
spec:
  replicas: #{Replicas}#
  selector:
    matchLabels:
      app: #{Application}#
  template:
    metadata:
      annotations:
        com.datadoghq.ad.logs: '[{"source": "java", "service": "remote-falcon-viewer", "log_processing_rules": [{"type": "multi_line", "name": "log_start_with_date", "pattern" : "\\d{4}-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])"}]}]'
      labels:
        app: #{Application}#
        tags.datadoghq.com/env: #{Env}#
        tags.datadoghq.com/service: #{Application}#
    spec:
      volumes:
        - hostPath:
            path: /var/run/datadog/
          name: apmsocketpath
      containers:
      - name: #{Application}#
        image: #{Image}#:#{Tag}#
        resources:
          requests:
            memory: #{Requests.Memory}#
            cpu: #{Requests.CPU}#
          limits:
            memory: #{Limits.Memory}#
            cpu: #{Limits.CPU}#
        volumeMounts:
          - name: apmsocketpath
            mountPath: /var/run/datadog
        ports:
        - containerPort: 8080
        startupProbe:
          httpGet:
            path: /remote-falcon-viewer/actuator/health
            port: 8080
          failureThreshold: 60
        livenessProbe:
          httpGet:
            path: /remote-falcon-viewer/actuator/health
            port: 8080
          initialDelaySeconds: 0
          timeoutSeconds: 10
          failureThreshold: 60
        readinessProbe:
          httpGet:
            path: /remote-falcon-viewer/actuator/health
            port: 8080
          failureThreshold: 60
          initialDelaySeconds: 0
      imagePullSecrets:
        - name: #{DockerHubSecret}#
---
apiVersion: v1
kind: Service
metadata:
  name: #{Application}#
  namespace: #{Namespace}#
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: #{Application}#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #{Application}#
  namespace: #{Namespace}#
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: #{Host}#
    http:
      paths:
      - pathType: Prefix
        path: /remote-falcon-viewer
        backend:
          service:
            name: #{Application}#
            port:
              number: 8080
